# vifrpc

./: README.md  dune-project  vifrpc-dev.opam  vifrpc-tests.opam  vifrpc.opam
lib/vifrpc/src/: dune  vifrpc.ml
lib/vifrpc/test/: dune  test__vifrpc.ml
